[project]
name = "rental_tour_booking"
authors = [{ name = "Kreatao", email = "dev@kreatao.com" }]
description = "Car Rental & Tour Package Booking management for Frappe v16 (GCC-ready)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
